# Rendurr-2

./: CMakeLists.txt
Editurr/: CMakeLists.txt
Editurr/assets/shaders/: frag.glsl  vertex.glsl
Editurr/src/: Editurr.cpp  EditurrLayer.cpp  EditurrLayer.hpp
Rendurr/: CMakeLists.txt
Rendurr/src/: Rendurr.hpp  main.cpp
Rendurr/src/Core/: Application.cpp  Application.hpp  Input.hpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  Window.cpp  Window.hpp
Rendurr/src/Events/: Event.hpp  EventPublisher.cpp  EventPublisher.hpp
Rendurr/src/Render/: IndexBuffer.cpp  IndexBuffer.hpp  RenderContext.cpp  RenderContext.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  ShaderUniforms.cpp  ShaderUniforms.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
Rendurr/src/Scene/: Camera.cpp  Camera.hpp
Rendurr/src/Utils/: FileUtils.hpp  Timer.hpp
scripts/: build.sh
